# CNWI-GEE

./: .gitignore  CHANGELOG.md  README.md  TODO.md  dev-requirments.txt  pyproject.toml  random_sample_from_poly.py  scratch.py  setup.cfg  setup.py  todo.md
cli/: cli.py  context.py
cnwi/: __init__.py  acas.py  bands.py  cfg.py  cmap.py  col.py  datacube.py  datasets.py  derivatives.py  eefactory.py  eelogging.py  elev.py  exports.py  fourier.py  ft.py  funcs.py  imgs.py  inputs.py  landcovers.py  masking.py  masks.py  moa.py  opt.py  pipeline.py  pipelines.py  prebuilt.py  rf.py  sar.py  sfilters.py  stack.py  table.py  td.py  trainingd.py  workflows.py
cnwi/datasets/: aafc.py  datacube.py  dem.py  struct.py  williston.py
cnwi/eelib/: deriv.py  eefactory.py  eefuncs.py  exports.py  scripttools.py  sf.py  stack.py  td.py
cnwi/pipelines/: __init__.py  cfg.py  colors.py  eerfpl.py  factories.py  plcfgs.py  plfuncs.py  td.py
dev/cfg/: phase-03.yaml
dev/code/: cnwi.py  mkclr.py  pipelines.py
dev/data/: willistonA_no_floodplain.dbf  willistonA_no_floodplain.sbn  willistonA_no_floodplain.sbx  willistonA_no_floodplain.shp  willistonA_no_floodplain.shp.xml  willistonA_no_floodplain.shx
dev/data/training_data.gdb/: a00000001.TablesByName.atx  a00000003.gdbtable  a00000004.CatItemsByPhysicalName.atx  a00000004.gdbtable  a00000004.gdbtablx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a0000000a.gdbtable  a0000000a.spx  a0000000b.gdbtable  a0000000b.gdbtablx  a0000000b.spx  timestamps
dev/mapping/: phase-3-interactive.ipynb
dev/notebooks/: phase-3-interactive.ipynb  phase-4-interactive.ipynb
dev/phase01/000-data/: phase01_viewport.shp
dev/phase01/000-data/training_data.gdb/: a00000004.FDO_UUID.atx
dev/phase01/001-extraction/: isolate-s1-images.ipynb  set-phase-viewport.ipynb
dev/phase01/003-MOA/: config.yaml  datacube.py
dev/phase01/datacube/: classification.py  debug.py  factory.py
dev/phase01/earthengine/: moa.py
dev/phase01/pipelines/: benchmark.py
dev/phase02/000-data/: viewport.shp
dev/phase02/001-explore/: cloudfreeS2.ipynb  viewport-64.ipynb
dev/phase02/002-data-cube/: interactive.ipynb
dev/results/phase01/000-data/: phase01_viewport.dbf  phase01_viewport.shx
dev/results/phase01/001-extraction/: systems.txt
dev/results/phase01/003-MOA/: benchmark.py
dev/results/phase01/datacube/: moa.py  stack.py
dev/results/phase01/earthengine/: factory.py
dev/results/phase01/pipelines/: datacube.py
dev/results/phase02/: readme.md
dev/results/phase02/000-data/: intersection_64.dbf  intersection_64.shp  viewport.dbf  (+2 more)
dev/results/phase03/: contents.txt  phase03.py
dev/results/phase04/: contents
docs/examples/: example.ipynb
eelib/: __init__.py  bands.py  classifiers.py  mapper.py
examples/: data.py  data_cube_pipeline.py  earth_engine_pipeline.py  fourier_transform.py  sample_pipeline.py
pipelines/: logging.py
scratch_notebooks/: test-interactivte-training-data.ipynb  test-interactivte.ipynb
scripts/: prep_training_data.py  prep_trianing_data.py  random_sample_from_poly.py
src/: eecnwi.py
src/cnwi/: acas.py  derivatives.py  elev.py  fourier.py  moa.py  opt.py  stack.py  trainingd.py
src/cnwi/data/: assets.txt
src/cnwi/scripts_internal/: classification_internal.py  main_internal.py
testing/: test-interactivte-logging.ipynb  test-interactivte-random-forest-data.ipynb  test-interactivte-training-data.ipynb  test_dem.py  test_masking.py
tests/: test_eecnwi_helpers.py  test_rf_interactivte.ipynb
(+12 files in other folders)
