[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cnwi_gee"
version = "1.0.7"
authors = [
  { name="Ryan Hamilton", email="ryangilberthamilton@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "earthengine-api",
    "geopandas",
    "matplotlib",
    "numpy",
    "fiona >= 1.8.19",
    "packaging",
    "pandas >= 1.1.0",
    "pyproj >= 3.0.1",
    "shapely >= 1.7.1",
    "tagee"
]

[tool.setuptools.packages.find]
include = [
    "cnwi",
    "cnwi.*"
]