[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cnwi_gee"
version = "3.0.0"
authors = [
  { name="Ryan Hamilton", email="ryangilberthamilton@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "earthengine-api",
    "geopandas",
    "numpy",
    "packaging",
    "pandas >= 1.1.0",
    "tagee"
]

[tool.setuptools.packages.find]
include = [
    "cnwi",
    "cnwi.*"
]