[metadata]
name = cnwigee
version = 0.0.1
author = Ryan Hamilton
author_email = ryangilberthamilton@gmail.com
description = Your description of the project
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

packages = find:


[options.entry_points]
console_scripts = 
    prep_training = scripts.prep_training_data:main
