[metadata]
name = cnwigee
version = 0.0.1
author = Ryan Hamilton
author_email = ryangilberthamilton@gmail.com
description = Your description of the project
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:

[options.packages.find]
include = cnwi*
